[package]
name = "friend_follow_buy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
toml = "0.8.0"
serde = { version = "1", features = ["derive"] } 
tracing = "0.1"
tracing-subscriber = "0.3"
ethers = { version = "2.0", features = ["legacy","rustls","openssl","ws"] }